--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  
+
   client:
     build:
       context: client
@@ -10,6 +10,10 @@ services:
       - ./client:/usr/app
     ports:
       - 3000:3000
+    environment:
+      - NODE_ENV=development
+    depends_on:
+      - server
 
   server:
     build:
@@ -18,6 +22,31 @@ services:
     volumes:
       - ./server:/usr/app
     ports:
-      - 5000:5000
+      - ${NESTJS_PORT}:${NESTJS_PORT}
     environment:
-      - NESTJS_PORT=5000
+      - NESTJS_PORT=${NESTJS_PORT}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DATABASE=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - NODE_ENV=development
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+    volumes:
+      - postgres-db:/var/lib/postgresql/data
+
+  # Graphical front-end, similar to phpMyAdmin, to monitor postgreSQL
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+
+volumes:
+  postgres-db: 
